# mango-signup

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
mango_signup/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  models.py  serializer.py  views.py
user/management/commands/: schema.py
user/migrations/: 0001_initial.py  0002_user_delete_customuser.py
