[tool.poetry]
name = "mango-signup"
version = "0.1.0"
description = "mango 회원가입 API"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
drf-yasg = "^1.21.7"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
black = "^23.7.0"
ruff = "^0.0.286"
psycopg2-binary = "^2.9.7"
djangorestframework-jwt = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
